# smearor-wrot-rotation

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  LICENSE.md  README.md  SECURITY.md
.github/: CODEOWNERS  labeler.yml  labels.yml
.github/workflows/: add_labels.yml  audit.yml  build.yml  dependabot-approve-and-auto-merge.yml  label-sync.yml  mark-stale-prs.yml  msrv.yml  pr-auto-assign.yml  pr-labeler.yml  release.yml  remove_labels.yml  wip.yml
book/: book.toml
book/src/: SUMMARY.md  animations.md  input_handling.md  introduction.md  widget.md
examples/: interactive_demo.rs
src/: layer.rs  lib.rs  rotation.rs
src/animation/: mod.rs  rotation.rs  zoom.rs
src/animation/functions/: easing.rs
src/widget/: layout.rs  mod.rs  rotation.rs  widget.rs
src/widget/imp/: layout.rs  mod.rs  region.rs  widget.rs
