[package]
name = "smearor-wrot-rotation"
version = "0.1.0"
authors = ["Andreas Schaeffer <hanack@nooblounge.net>"]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/smearor/smearor-wrot-rotation"
homepage = "https://smearor.io/"
rust-version = "1.92.0"

[dependencies]
glib = "0.22"
glib-sys = "0.22"
glib-unix = "0.22"
gtk4 = { version = "0.11", features = ["v4_20"] }
gtk4-layer-shell = { version = "0.8.0" }
gtk4-sys = { version = "0.11", features = ["v4_20"] }
miette = "7.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)', 'cfg(fn_traits)', 'cfg(unboxed_closures)'] }

[workspace.lints.clippy]
non_std_lazy_statics = "warn"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = "symbols"

#
